--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="assets/img/swasthorganica.png" alt="" class="img-fluid">
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/iswarrasoi.PNG" alt="" class="img-fluid">
+            <img src="assets/img/iswarrasoi.png" alt="" class="img-fluid">
           </div>
 
         </div>
