--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>MILLAT MITHILA</title>
+  <title>MILLET MITHILA</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -71,7 +71,7 @@
     <!-- Hero Section -->
     <div id="hero" class="hero dark-background">
 
-      <img src="assets/img/millat111.webp" alt="" data-aos="fade-in">
+      <img src="assets/img/millet111.webp" alt="" data-aos="fade-in">
 
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
@@ -110,10 +110,10 @@
           <div class="row gy-4">
 
             <div class="col-lg-12 col-md-6">
-              <h2><b>MILLAT MITHILA:</b></h2>
-              <p>Millat Mithila is a millat processing unit located in Kannur, Kerala, dedicated to introducing millat
+              <h2><b>MILLET MITHILA:</b></h2>
+              <p>Millet Mithila is a millet processing unit located in Kannur, Kerala, dedicated to introducing millet
                 to
-                our customers and raising awareness about the benefits of incorporating millats into daily diets.</p>
+                our customers and raising awareness about the benefits of incorporating millets into daily diets.</p>
             </div><!-- End Stats Item -->
 
 
@@ -124,7 +124,7 @@
 
             <div class="col-lg-12 col-md-6">
               <h2><b>Swasth Organica:</b></h2>
-              <p>This is our organic store where we sell processed millats and other organic products, including food
+              <p>This is our organic store where we sell processed millets and other organic products, including food
                 items, cosmetics, and herbal cleaning essentials. Swasth Organica is committed to providing high-quality
                 organic products to encourage a healthier way of living</p>
             </div>
@@ -132,9 +132,9 @@
 
             <div class="col-lg-12 col-md-6">
               <h2><b>Iswar Rasoi:</b></h2>
-              <p>Our restaurant specializes in millat-based organic food. At Iswar Rasoi, we offer a unique dining
-                experience where customers can taste and test millat-based dishes. Our goal is to help customers
-                understand the positive impact of millats and organic products on health and well-being.</p>
+              <p>Our restaurant specializes in millet-based organic food. At Iswar Rasoi, we offer a unique dining
+                experience where customers can taste and test millet-based dishes. Our goal is to help customers
+                understand the positive impact of millets and organic products on health and well-being.</p>
             </div>
 
 
@@ -150,9 +150,9 @@
 
             <div class="col-lg-12 col-md-6" style="margin-top: 60px;">
               <h2 style="margin-bottom: 30px;"><b>ISWAR RASOI</b></h2>
-              <p>Iswar Rasoi: A Unique Dining Experience in Millat-Based Organic Cuisine Iswar Rasoi is dedicated to
-                offering a unique dining experience focused on millat-based organic cuisine. Our mission is to help
-                customers discover the health benefits of millats and organic products through delicious, wholesome
+              <p>Iswar Rasoi: A Unique Dining Experience in Millet-Based Organic Cuisine Iswar Rasoi is dedicated to
+                offering a unique dining experience focused on millet-based organic cuisine. Our mission is to help
+                customers discover the health benefits of millets and organic products through delicious, wholesome
                 meals
               </p>
 
@@ -163,7 +163,7 @@
                 apart
               </p>
 
-              <p>Organic Ingredients: All ingredients used in our dishes are organic and millat-based, sourced directly
+              <p>Organic Ingredients: All ingredients used in our dishes are organic and millet-based, sourced directly
                 from
                 our store, Swasth Organica. This ensures that our food is not only healthy but also of the highest
                 quality
@@ -185,9 +185,9 @@
                 They are dedicated to maintaining quality and providing our customers with nutritious and comforting
                 food</p>
 
-              <p>At Iswar Rasoi, we believe in the power of millats and organic living. Join us for a meal and
+              <p>At Iswar Rasoi, we believe in the power of millets and organic living. Join us for a meal and
                 experience
-                the difference of wholesome, millat-based cuisine prepared with care and integrity.</p>
+                the difference of wholesome, millet-based cuisine prepared with care and integrity.</p>
             </div>
 
           </div>
