--- a/index.html
+++ b/index.html
@@ -400,16 +400,16 @@
               <div class="info-item d-flex"  >
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
-                </div>
+  <h3>Email Us</h3>
+  <p><a href="mailto:milletmithila2024@gmail.com">milletmithila2024@gmail.com</a></p>
+</div>
               </div>
 
               <div class="info-item d-flex"  >
                 <i class="bi bi-search flex-shrink-0"></i>
                 <div>
                   <h3>More info</h3>
-                  <p>https://g.co/kgs/8CgMRfa</p>
+                 <p><a href"https://g.co/kgs/8CgMRfa">Click Here</a></p>
                 </div>
               </div><!-- End Info Item -->
 
