--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+91 95623 88306</p>
+                  <p><a href="tel:+919562388306">+91 95623 88306</a></p>
                 </div>
               </div><!-- End Info Item -->
 
