--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <i class="bi bi-search flex-shrink-0"></i>
                 <div>
                   <h3>More info</h3>
-                 <p><a href"https://g.co/kgs/8CgMRfa">Click Here</a></p>
+                 <p><a href="https://g.co/kgs/8CgMRfa">Click Here</a></p>
                 </div>
               </div><!-- End Info Item -->
 
