--- a/index.html
+++ b/index.html
@@ -206,22 +206,22 @@
               <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="1">
 
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-                  <img src="assets/img/SREE4650.webp" class="img-fluid" alt="">
+                  <!-- <img src="assets/img/SREE4650.webp" class="img-fluid" alt=""> -->
 
                 </div><!-- End Portfolio Item -->
 
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-                  <img src="assets/img/SREE4764.webp" class="img-fluid" alt="">
+                  <!-- <img src="assets/img/SREE4764.webp" class="img-fluid" alt=""> -->
 
                 </div><!-- End Portfolio Item -->
 
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-                  <img src="assets/img/SREE4645.webp" class="img-fluid" alt="">
+                  <!-- <img src="assets/img/SREE4645.webp" class="img-fluid" alt=""> -->
 
                 </div><!-- End Portfolio Item -->
 
                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-                  <img src="assets/img/SREE4705.webp" class="img-fluid" alt="">
+                  <!-- <img src="assets/img/SREE4705.webp" class="img-fluid" alt=""> -->
 
                 </div><!-- End Portfolio Item -->
 
