--- a/index.html
+++ b/index.html
@@ -112,30 +112,24 @@
 
             <div class="col-lg-12 col-md-6">
               <h2><b>MILLET MITHILA:</b></h2>
-              <p>Millet Mithila is a millet processing unit located in Kannur, Kerala, dedicated to introducing millet
-                to
-                our customers and raising awareness about the benefits of incorporating millets into daily diets.</p>
+              <p>At Millet Mithila, we are committed to transforming the way people approach their diets by reintroducing the magic of millets. Based in Kannur, Kerala, we are a millet processing unit passionate about providing healthy, sustainable, and nutritious alternatives to everyday grains. Our mission is simple: to educate and inspire individuals to incorporate millets into their daily meals, ensuring a healthier lifestyle for themselves and their families.</p>
             </div><!-- End Stats Item -->
 
 
             <div class="col-lg-12 col-md-6">
               <h2><b>Our Vision:</b></h2>
-              <p>Our aim is to promote organic living and a healthier lifestyle through various initiatives</p>
+              <p>We envision a world where ancient grains like millet are no longer overlooked but are embraced for their health benefits and positive impact on the environment. We aim to be at the forefront of this change, leading the way with innovative millet products that nourish both body and soul.</p>
             </div>
 
             <div class="col-lg-12 col-md-6">
-              <h2><b>Swasth Organica:</b></h2>
-              <p>This is our organic store where we sell processed millets and other organic products, including food
-                items, cosmetics, and herbal cleaning essentials. Swasth Organica is committed to providing high-quality
-                organic products to encourage a healthier way of living</p>
+              <h2><b>Our Story:</b></h2>
+              <p>Millets, once a staple in traditional Indian diets, are making a well-deserved comeback. At Millet Mithila, we are dedicated to showcasing the versatility and benefits of these power-packed grains. With our advanced processing techniques, we ensure that every product we deliver is of the highest quality, retaining the natural goodness and nutrients of the millet</p>
             </div>
 
 
             <div class="col-lg-12 col-md-6">
-              <h2><b>Iswar Rasoi:</b></h2>
-              <p>Our restaurant specializes in millet-based organic food. At Iswar Rasoi, we offer a unique dining
-                experience where customers can taste and test millet-based dishes. Our goal is to help customers
-                understand the positive impact of millets and organic products on health and well-being.</p>
+              <h2><b>Our Products:</b></h2>
+              <p>From ready-to-cook millet products to delicious snacks, we offer a wide range of items that make it easy for everyone to enjoy the benefits of millets. Whether you're a health enthusiast or someone looking to make small changes in your diet, our products are crafted with care to fit seamlessly into your lifestyle.</p>
             </div>
 
 
@@ -150,45 +144,8 @@
 
 
             <div class="col-lg-12 col-md-6" style="margin-top: 60px;">
-              <h2 style="margin-bottom: 30px;"><b>ISWAR RASOI</b></h2>
-              <p>Iswar Rasoi: A Unique Dining Experience in Millet-Based Organic Cuisine Iswar Rasoi is dedicated to
-                offering a unique dining experience focused on millet-based organic cuisine. Our mission is to help
-                customers discover the health benefits of millets and organic products through delicious, wholesome
-                meals
-              </p>
-
-              <p>Our Commitment to Quality and Transparency: At Iswar Rasoi, we pride ourselves on maintaining the
-                highest
-                standards of cleanliness and hygiene. Our open kitchen allows customers to observe the entire meal
-                preparation process, ensuring transparency and trust. Here are some of the key features that set us
-                apart
-              </p>
-
-              <p>Organic Ingredients: All ingredients used in our dishes are organic and millet-based, sourced directly
-                from
-                our store, Swasth Organica. This ensures that our food is not only healthy but also of the highest
-                quality
-              </p>
-
-              <p>Purified Water: We use well-purified water for all cooking and preparation processes, guaranteeing the
-                safety and purity of our food</p>
-
-              <p>Traditional Storage Methods: Our food is prepared and stored in either steel or brass containers,
-                aligning
-                with traditional and safe food storage practice</p>
-              <p>Herbal Cleaning Products: We clean our kitchen and utensils with herbal cleaning products, ensuring a
-                chemical-free environment</p>
-
-              <p>Sustainability: We are committed to zero waste. All food waste is composted and used as fertilizer,
-                promoting sustainable practices and environmental responsibility.</p>
-
-              <p>Homely Touch: Our staff comprises housewives and mothers who bring a homely touch to every meal.
-                They are dedicated to maintaining quality and providing our customers with nutritious and comforting
-                food</p>
-
-              <p>At Iswar Rasoi, we believe in the power of millets and organic living. Join us for a meal and
-                experience
-                the difference of wholesome, millet-based cuisine prepared with care and integrity.</p>
+              <h2 style="margin-bottom: 30px;"><b>Iswar Rasoi & Swasth Organica</b></h2>
+              <p>Our commitment to promoting a millet-based lifestyle extends beyond our processing unit. We run Iswar Rasoi, a one-of-a-kind restaurant where customers can experience the rich flavors of millet-based organic dishes. Additionally, through Swasth Organica, we offer a range of organic products, from millets to natural cosmetics and herbal cleaning essentials, ensuring our customers have access to healthier, sustainable alternatives for every aspect of their lives.</p>
             </div>
 
           </div>
