--- a/index.html
+++ b/index.html
@@ -213,10 +213,11 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                 <img src="assets/img/product1.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>product 1</h4>
+<!--                   <h4>product 1</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product1.webp" title="product 1" data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    class="glightbox preview-link">
+                    <i class="bi bi-zoom-in"></i></a>
                   <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
                     class="bi bi-link-45deg"></i></a> -->
                 </div>
@@ -225,7 +226,7 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
                 <img src="assets/img/product2.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 2</h4>
+<!--                   <h4>Product 2</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product2.webp" title="Product 2" data-gallery="portfolio-gallery-product"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -237,7 +238,7 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
                 <img src="assets/img/product3.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>product 3</h4>
+<!--                   <h4>product 3</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product3.webp" title="product 3" data-gallery="portfolio-gallery-branding"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -249,7 +250,7 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
                 <img src="assets/img/product4.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>product 4</h4>
+<!--                   <h4>product 4</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product4.webp" title="product 4" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -261,7 +262,7 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                 <img src="assets/img/product5.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>product 5</h4>
+<!--                   <h4>product 5</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product5.webp" title="product 5" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -273,31 +274,32 @@
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
                 <img src="assets/img/product6.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>product 6</h4>
+<!--                   <h4>product 6</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product6.webp" title="Product 6" data-gallery="portfolio-gallery-product"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
-              </div><!-- End Portfolio Item -->
+              </div>
 
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+<!--               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
                 <img src="assets/img/product7.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>product 7</h4>
-                  <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
+                
                   <a href="assets/img/product7.webp" title="product 7" data-gallery="portfolio-gallery-branding"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
-              </div><!-- End Portfolio Item -->
+              </div> -->
+             
 
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
                 <img src="assets/img/product8.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>product 8</h4>
+<!--                   <h4>product 7</h4> -->
                   <!-- <p>Lorem ipsum, dolor sit amet consectetur</p> -->
                   <a href="assets/img/product8.webp" title="product 8" data-gallery="portfolio-gallery-book"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
