--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             </div>
 
 
-            <div class="col-lg-12 col-md-6" style="margin-top: 60px;">
-              <h2 style="margin-bottom: 30px;"><b>Iswar Rasoi & Swasth Organica</b></h2>
+            <div class="col-lg-12 col-md-6" style="margin-top: 40px;">
+              <h2><b>Iswar Rasoi & Swasth Organica</b></h2>
               <p>Our commitment to promoting a millet-based lifestyle extends beyond our processing unit. We run Iswar Rasoi, a one-of-a-kind restaurant where customers can experience the rich flavors of millet-based organic dishes. Additionally, through Swasth Organica, we offer a range of organic products, from millets to natural cosmetics and herbal cleaning essentials, ensuring our customers have access to healthier, sustainable alternatives for every aspect of their lives.</p>
             </div>
 
