--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
     <!-- About Section -->
     <section id="about" class="about section">
 
+       <div class="container section-title">
+        <h2>About Us</h2>
+        <!-- <p>our products</p> -->
+      </div><!-- End Section Title -->
+
       <div class="container">
 
         <div class="row gy-3">
