--- a/index.html
+++ b/index.html
@@ -90,26 +90,13 @@
         <!-- <p>our products</p> -->
       </div><!-- End Section Title -->
 
-      <div class="container">
-
-        <div class="row gy-3">
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/swasthorganica.png" alt="" class="img-fluid">
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/iswarrasoi.png" alt="" class="img-fluid">
-          </div>
-
-        </div>
-
-      </div>
+     
 
       <!-- </section> -->
       <!-- /About Section -->
 
       <!-- Stats Section -->
-      <div class="stats section" style="padding-top: 5%;">
+      <div class="stats section">
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -156,50 +143,64 @@
           </div>
 
         </div>
+         <div class="container">
 
-        <!-- Portfolio Section -->
-        <div class="portfolio section">
+        <div class="row gy-3">
 
-          <div class="container">
-
-            <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
-
-
-              <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="1">
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-                  <!-- <img src="assets/img/SREE4650.webp" class="img-fluid" alt=""> -->
-
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-                  <!-- <img src="assets/img/SREE4764.webp" class="img-fluid" alt=""> -->
-
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-                  <!-- <img src="assets/img/SREE4645.webp" class="img-fluid" alt=""> -->
-
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-                  <!-- <img src="assets/img/SREE4705.webp" class="img-fluid" alt=""> -->
-
-                </div><!-- End Portfolio Item -->
-
-
-
-              </div><!-- End Portfolio Container -->
-
-            </div>
-
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/swasthorganica.png" alt="" class="img-fluid">
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/iswarrasoi.png" alt="" class="img-fluid">
           </div>
 
         </div>
 
       </div>
 
+        <!-- Portfolio Section -->
+<!--         <div class="portfolio section">
+
+          <div class="container">
+
+            <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+ -->
+
+
+<!--               <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="1"> -->
+
+<!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"> -->
+                  <!-- <img src="assets/img/SREE4650.webp" class="img-fluid" alt=""> -->
+
+<!--                 </div><!-- End Portfolio Item --> -->
+
+<!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"> -->
+                  <!-- <img src="assets/img/SREE4764.webp" class="img-fluid" alt=""> -->
+
+<!--                 </div><!-- End Portfolio Item --> -->
+
+<!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"> -->
+                  <!-- <img src="assets/img/SREE4645.webp" class="img-fluid" alt=""> -->
+
+<!--                 </div><!-- End Portfolio Item --> -->
+
+<!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"> -->
+                  <!-- <img src="assets/img/SREE4705.webp" class="img-fluid" alt=""> -->
+
+<!--                 </div><!-- End Portfolio Item --> -->
+
+
+
+<!--               </div>
+
+            </div>
+
+          </div> -->
+
+<!--         </div> -->
+
+      </div>
+    </section>
       <!-- Portfolio Section -->
       <section id="gallery" class="portfolio section">
 
