--- a/index.html
+++ b/index.html
@@ -172,22 +172,21 @@
 <!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"> -->
                   <!-- <img src="assets/img/SREE4650.webp" class="img-fluid" alt=""> -->
 
-<!--                 </div><!-- End Portfolio Item --> -->
+<!--                 </div><!-- End Portfolio Item --> 
 
 <!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"> -->
                   <!-- <img src="assets/img/SREE4764.webp" class="img-fluid" alt=""> -->
 
-<!--                 </div><!-- End Portfolio Item --> -->
-
+<!--                 </div><!-- End Portfolio Item --> 
 <!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"> -->
                   <!-- <img src="assets/img/SREE4645.webp" class="img-fluid" alt=""> -->
 
-<!--                 </div><!-- End Portfolio Item --> -->
+<!--                 </div><!-- End Portfolio Item --> 
 
 <!--                 <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product"> -->
                   <!-- <img src="assets/img/SREE4705.webp" class="img-fluid" alt=""> -->
 
-<!--                 </div><!-- End Portfolio Item --> -->
+<!--                 </div><!-- End Portfolio Item --> 
 
 
 
